--- a/todo/app/templates/home.html
+++ b/todo/app/templates/home.html
@@ -1,64 +1,20 @@
+
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            display: flex;
-            flex-direction: column-reverse;
-        }
-        li {
-            margin: 10px 0;
-            padding: 5px;
-            border: 1px solid #ccc;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .completed {
-            text-decoration: line-through;
-            opacity: 0.6;
-        }
-        .actions {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-        }
-        .icon {
-            border: none;
-            padding: 0;
-            cursor: pointer;
-        }
-        form {
-            display: flex;
-            margin-bottom: 20px;
-        }
-        input[type="text"] {
-            flex-grow: 1;
-            margin-right: 10px;
-        }
-    </style>
-</head>
-<body>
+{% block title %}Home Page{% endblock %}
+{% block content %}
+
+<div class="home-page">
     <h1>Todo List</h1>
 
     <!-- Create a Task -->
+  <div class="new-task-frame">
     <form action="{% url 'app:create_new_task' %}" method="POST">
         {% csrf_token %}
         <input type="text" name="task_title" placeholder="New task" required>
         <button type="submit">Add</button>
     </form>
+  </div>
 
     <!-- Show available tasks -->
     <ul class="task-list">
@@ -104,6 +60,5 @@
             <li>No tasks to display.</li>
         {% endfor %}
     </ul>
-</body>
-
-</html>
+</div>
+{% endblock %}
